[package]
name = "toykio"
version = "0.2.1"
authors = ["plhk"]
description = "toy tokio reactor"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/polachok/toykio"
repository = "https://github.com/polachok/toykio"
keywords = ["async", "futures"]
categories = ["network-programming"]

[dependencies]
futures-preview = "0.3.0-alpha.2"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.2"
