[package]
name = "fahrenheit"
version = "4.5.2"
authors = ["plhk"]
description = "toy futures executor (formerly known as toykio)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/polachok/fahrenheit"
repository = "https://github.com/polachok/fahrenheit"
keywords = ["async", "futures"]
categories = ["network-programming"]
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.3"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.2"
